2006-06-28 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Removed BUILD_API=2, set grimoire-wide

2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
	* DETAILS: (automated) Add KEYWORDS

2005-11-29 Seth Woolley <seth@tautology.org>
	* DETAILS: MD5 -> SHA512

2005-09-23 George Sherwood <george@beernabeer.com>
	* DETAILS, BUILD: Updated for BUILD_API=2
	* INSTALL, FINAL: Added for BUILD_API=2
	* POST_INSTALL: removed for BUILD_API=2

2004-02-02 Andrew Stitt <astitt@sourcemage.org>
	* Removed useless metalog.conf mucking in POST_INSTALL
	  bug 5234

2003-08-22 hgg <hgreig@bigpond.net.au>
	* Update UPDATED purely for test grimoire integration.

2003-08-20 hgg <hgreig@bigpond.net.au>
	* Stop autostarting of scripts

2003-08-04 Seth Woolley <seth@tautology.org>
	* Modified POST_INSTALL for new telinit syntax

2003-07-31 Arwed v. Merkatz <v.merkatz@gmx.net>
	* updated to new init system
	  gcc3 build fix

2003-07-13 Eric Sandall <sandalle@sourcemage.org>
	* Fixed Bug #3739

2003-05-02 Rob Verkuylen <rob@verkuylen.net>
	* Copied /init.d/wachdog.sh to /init.d/watchdog
	  Step 1/3 in bug#: 3115

2003-03-31 Eric Sandall <sandalle@sourcemage.org>
	* Updated to use sorcery's init.d installer
	* Removed TABs from BUILD
	* Removed CONFIGURE as sorcery handles this

2003-01-22 M.L. <mlubrano@sourcemage.org>
	* Created spell.
