@@ -11,7 +11,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
       LICENSE[0]=GPL
         WEB_SITE=http://www.gnu.org/directory/System_administration/monitor/watchdog.html
          ENTERED=20030731
-         UPDATED=20030822
+      PATCHLEVEL=1
         KEYWORDS="utils"
            SHORT="A software watchdog daemon"
 cat << EOF
