@@ -13,7 +13,7 @@ diff -Nur watchdog-5.2-orig/include/sundries.h watchdog-5.2/include/sundries.h
 diff -Nur watchdog-5.2-orig/src/quotactl.c watchdog-5.2/src/quotactl.c
 --- watchdog-5.2-orig/src/quotactl.c	1999-09-09 11:03:06.000000000 +0200
 +++ watchdog-5.2/src/quotactl.c	2003-07-31 01:40:26.000000000 +0200
-@@ -34,6 +34,7 @@
+@@ -34,9 +34,10 @@
  	return syscall(__NR_quotactl, cmd, special, id, addr);
  }
  #else
@@ -21,3 +21,7 @@ diff -Nur watchdog-5.2-orig/src/quotactl.c watchdog-5.2/src/quotactl.c
  #include <sys/types.h>
  #define __LIBRARY__
  #include <linux/unistd.h>
+ 
+-_syscall4(int, quotactl, int, cmd, const char *, special, int, id, caddr_t, addr);
++_syscall4(int quotactl, int cmd, const char * special, int id, caddr_t addr);
+ #endif
