@@ -1,3 +1,7 @@
+2007-10-20 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: removed UPDATED, PATCHLEVEL++
+	* watchdog-gcc3.patch: updated so it builds with gcc 4.x
+
 2006-06-28 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Removed BUILD_API=2, set grimoire-wide
 
